--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- Photo Grid -->
       <div class="row"> 
         <div class="column">
-        <image src = "image/photo1.jpg" Id="Photo1"  style="width:100%"><br></image>
+        <image src = "image/cityscape.jpg" Id="Photo1"  style="width:100%"><br></image>
         <image src = "image/photo2.jpg" Id="Photo2"  style="width:100%"></image>
         <image src = "image/photo3.jpg" Id="Photo3"  style="width:100%"></image>
         <image src = "image/photo4.jpg" Id="Photo4" style="width:100%"></image>
